# simple-drf-blog

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO  pyproject.toml
backend/apps/accounts/: managers.py  permissions.py  services.py  signals.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_editorprofile_user.py
backend/apps/accounts/models/: __init__.py  profiles.py  users.py
backend/apps/accounts/serializers/: __init__.py  profiles.py  users.py
backend/apps/accounts/tests/: conftest.py  test_accounts_managers.py  test_profiles_models.py  test_profiles_serializers.py  test_profiles_views.py  test_users_models.py  test_users_permissions.py  test_users_serializers.py  test_users_services.py  test_users_views.py
backend/apps/accounts/utils/: encryption.py
backend/apps/accounts/views/: profiles.py  users.py
backend/apps/content/: managers.py  mixins.py
backend/apps/content/filters/: __init__.py  posts.py
backend/apps/content/migrations/: 0001_initial.py  0002_post.py
backend/apps/content/models/: __init__.py  categories.py  posts.py  tags.py
backend/apps/content/serializers/: __init__.py  categories.py  posts.py  tags.py
backend/apps/content/tests/: conftest.py  test_content_filters.py  test_content_models.py  test_content_serializers.py  test_content_views.py
backend/apps/content/views/: __init__.py  categories.py  posts.py  tags.py
backend/apps/metrics/: models.py  signals.py  urls.py  views.py
backend/apps/metrics/tests/: test_metrics_views.py
backend/apps/metrics/views/: __init__.py  health.py
backend/apps/uploads/: exceptions.py  models.py  serializers.py  service.py  services.py  views.py
backend/apps/uploads/migrations/: 0001_initial.py  0004_upload_purpose.py  0005_alter_upload_file_alter_upload_hash_md5_and_more.py  0007_remove_upload_uploads_upl_hash_md_73d199_idx_and_more.py
backend/apps/uploads/tests/: conftest.py  test_file_processor.py  test_path_utils.py  test_uploads_models.py  test_uploads_serializers.py  test_uploads_service.py  test_uploads_services.py  test_uploads_views.py
backend/apps/uploads/utils/: __init__.py  file_processor.py  path.py
backend/apps/users/: permissions.py  signals.py
backend/apps/users/migrations/: 0001_initial.py  0002_remove_editorprofile_last_activity_sociallink_and_more.py  0003_alter_user_options.py  0004_change_related_name_to_profile.py  0005_alter_sociallink_name_alter_sociallink_url_and_more.py
backend/apps/users/models/: __init__.py  profiles.py  socials.py  users.py
backend/apps/users/serializers/: __init__.py  profiles.py  users.py
backend/apps/users/tests/: conftest.py  test_profiles_models.py  test_profiles_serializers.py  test_profiles_views.py  test_users_models.py  test_users_permissions.py  test_users_serializers.py  test_users_views.py
backend/apps/users/views/: __init__.py  profiles.py  users.py
backend/config/: routers.py  urls.py  views.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  tests.py
backend/tests/factories/: __init__.py  accounts.py  accounts_factories.py  content.py  content_factories.py  uploads.py  uploads_factories.py  users_factories.py
backend/tests/helpers/: __init__.py  api.py  datetime.py  jsonapi.py
backend/tests/integration_tests/: conftest.py  test_accounts_profiles.py  test_accounts_users.py  test_auth_flow.py  test_auth_workflow.py  test_content_categories.py  test_content_posts.py  test_content_tags.py  test_uploads_uploads.py
backend/tests/utils_tests/: test_config_views.py  test_text_tools.py
backend/utils/: exceptions.py  file_tools.py  upload_helpers.py
docker/: docker-compose.dev.yml  docker-compose.yml  dockerfile  dockerfile.dev  entrypoint.sh
nginx/certs/: .gitignore
nginx/conf.d/: blog.conf
nginx/scripts/: gen-self-signed.sh
nginx/snippets/: ssl-params.conf
scripts/: api_keygen.py  encryption_keygen.py
src/apps/accounts/: exceptions.py  permissions.py  services.py
src/apps/accounts/migrations/: 0001_initial.py  0002_alter_profile_is_public.py
src/apps/accounts/models/: profiles.py  users.py
src/apps/accounts/schemas/: __init__.py  profiles.py  users.py
src/apps/accounts/serializers/: __init__.py  profiles.py  users.py
src/apps/accounts/tests/: conftest.py  test_accounts_managers.py  test_profiles_models.py  test_profiles_serializers.py  test_profiles_views.py  test_users_models.py  test_users_permissions.py  test_users_serializers.py
src/apps/accounts/utils/: encryption.py
src/apps/accounts/views/: profiles.py  users.py
src/apps/content/: managers.py  mixins.py
src/apps/content/filters/: posts.py
src/apps/content/migrations/: 0001_initial.py
src/apps/metrics/: apps.py  middleware.py  models.py  schemas.py  serializers.py  signals.py  tasks.py  urls.py  views.py
src/apps/uploads/: managers.py  models.py  schemas.py  serializers.py  services.py  tasks.py  views.py
src/config/: routers.py  urls.py  views.py
src/config/settings/: base.py  development.py  production.py  tests.py
src/tests/factories/: __init__.py  accounts.py  content.py  metrics.py  profiles.py  uploads.py
src/tests/helpers/: datetime.py
src/tests/integration_tests/: test_accounts_users.py  test_content_categories.py  test_content_posts.py  test_uploads_uploads.py
src/tests/utils_tests/: test_config_views.py  test_text_tools.py
src/utils/: exceptions.py  text_tools.py
(+58 files in other folders)
