[project]
name = "simple-drf-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.2",
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
    "python-magic>=0.4.27",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "markdown>=3.9",
]
